<resources>
    <string name="app_name">Group Project</string>
    <string name="Login">User Login</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter Password</string>
    <string name="ContactScreen">Contact us</string>
    <string name="AboutScreen">About us</string>
    <string name="LoginScreen">Login</string>
    <string name="imgLogo">Logo Image</string>

    <string name="name">Name:</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="bName">Bhargavkumar Nakrani</string>
    <string name="sName">Sanket Panasuriya</string>
    <string name="mName">Sunil Maru</string>
    <string name="bEmail">bnakrani833@rku.ac.in</string>
    <string name="sEmail">spanasuriya892@rku.ac.in</string>
    <string name="mEmail">smaru619@rku.ac.in</string>
    <string name="bMobile">7984551549</string>
    <string name="sMobile">6355 365 761</string>
    <string name="mMobile">9510127515</string>
    <string name="loginDes">Login Content</string>

    <string name="gender">Gender:</string>
    <string name="city">City:</string>
    <string name="companyName">Git Developers</string>
    <string name="contentDiscription">TODO</string>
    <string name="pincode">395010</string>
    <string name="cityState">Surat,Gujarat.</string>
    <string name="officeAddress">35, Sitanagar Chowk, Punagam,</string>

</resources>
