<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img1"
                android:layout_width="230dp"
                android:layout_height="170dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="508dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtName2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/name"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/mName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/mName"
                        android:textSize="21sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtMobile2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/mobile"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/mMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/mMobile"
                        android:textSize="21sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtEmail3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/email"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/sEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/mEmail"
                        android:textSize="21sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="508dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtName1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/name"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/nameB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/bName"
                        android:textSize="21sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtMobile1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/mobile"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/bMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/bMobile"
                        android:textSize="21sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtEmail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/email"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/bEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/bEmail"
                        android:textSize="21sp" />
                </LinearLayout>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img2"
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:src="@drawable/img_bhargav"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img3"
                android:layout_width="227dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="508dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtName3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/name"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/sName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/sName"
                        android:textSize="21sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtMobile3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/mobile"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/sMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/sMobile"
                        android:textSize="21sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtEmail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:text="@string/email"

                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/mEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:text="@string/sEmail"
                        android:textSize="21sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>