<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_of_login"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:shadowColor="#050505"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="5"
                android:text="@string/Login"
                android:textColor="#D50000"
                android:textSize="36sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="5dp"
                    card_view:cardCornerRadius="50dp"
                    card_view:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="503dp"
                        android:background="@drawable/gradient_login"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="154dp"
                            android:layout_height="144dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            card_view:srcCompat="@drawable/login_icon" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center_horizontal"
                                android:text="@string/username"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/edtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/enter_username"
                                android:importantForAutofill="no"
                                android:inputType="textEmailAddress"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center_horizontal"
                                android:text="@string/password"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/edtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:hint="@string/enter_password"
                                android:importantForAutofill="no"
                                android:inputType="textPassword" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/btnLogin"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="#388E3C"
                            android:scrollbarStyle="outsideOverlay"
                            android:shadowColor="#3C1E85"
                            android:text="@string/btnLogin"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
